kuber2.3/manifest/experiments/deploynp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exdeploy
  labels:
    app: exdeploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: exdeploy
  template:
    metadata:
      labels:
        app: exdeploy
    spec:
      volumes:
      - name: excm-vlm
        configMap:
          name: excm
          items:
            - key: nginx.conf
              path: nginx.conf
      containers:
      - name: nginx
        image: nginx:1.20
        volumeMounts:
        - name: excm-vlm
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        ports:
        - name: http
          containerPort: 80
#        - name: https
#          containerPort: 443
      restartPolicy: Always
#
---
apiVersion: v1
kind: Service
metadata:
  name: ex-svc
spec:
  selector:
    app: exdeploy
  ports:
  - name: http
    port: 9999
    targetPort: 80
#  - name: https
#    port: 443
#    targetPort: 443
  type: NodePort
