kuber2.3/manifest/experiments/dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-ing
  strategy:
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 30%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-ing
    spec:
      containers:
      - image: nginx:1.20
        name: nginx
        ports:
        - containerPort: 80
#        readinessProbe:
#          failureThreshold: 3
#          successThreshold: 1
#          periodSeconds: 10
#          timeoutSeconds: 3
#          httpGet:
#            port: 80
#            path: /
#        livenessProbe:
#          failureThreshold: 3
#          successThreshold: 1
#          periodSeconds: 10
#          timeoutSeconds: 3
#          httpGet:
#            port: 80
#            path: /
#        resources:
#          requests:
#            cpu: 200m
#            memory: 250Mi
#          limits:
#            cpu: 200m
#            memory: 250Mi
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d/
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-svc-front
#spec:
#  selector:
#    app: nginx-ing
#  ports:
#  - port: 80
#    nodePort: 30080
#    name: http
#  type: NodePort
#
#---
#apiVersion: v1
#kind: Service
#metadata:
#    name: nginx-svc-front-omg
#spec:
#    selector:
#      app: nginx-svc-front
#    ports:
#    - name: http
#      port: 9999
#      targetPort: 30080


---
apiVersion: v1
kind: Service
metadata:
    name: nginx-svc-front
spec:
    selector:
      app: nginx-ing
    ports:
    - name: http
      port: 80
      targetPort: 80


---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-app
spec:
  tls:
    - hosts:
        - localkube15.com
      secretName: simpletls
  rules:
  - host: localkube15.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc-front
            port:
              number: 80
  ingressClassName: nginx
